<resources>
    <string name="app_name">Book Library</string>
    <string name="app_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAiumQY5hDfDqN5v6Uz+BbWgtH5J/1T3OVnM0dz38WovmdMjn/4yd0VJBLFRFw6wR59D6/pCsd2KBoQ23r7cjBiY9xhGqgjDHHT/hh5VPYxBqjj2qiC6fwCdGLhIwsE5DWdJr0dEknEO1YAZn6Oce64htFHGWomalknMjMAJG+2dIhunPn/3px24SDKpOdLrhS2HKenbmmK12wfMmlgeLq1nrIQRa8AflbWvOwtvQGqCCTdy93dHQllJahguLjv91v/VRE/4UmGGxhLdGkPqiQEIqIXXkEUHdDn84Eyfcsyx0EL9huk/LyLO1IzOlOWqjZBR91XX8aIqO7t7QGwIsyRwIDAQAB</string>
    <string name="book_reader_book_selector">精选</string>
    <string name="book_reader_bookshelf">书架</string>
    <string name="book_reader_discover">周刊</string>
    <string name="book_reader_bookstore">书城</string>
    <string name="book_reader_me">我的</string>
    <string name="book_reader_community">社区</string>
    <string name="please_check_network_info">请检查网络连接</string>
    <string name="book_reader_pay_chapter">付费章节</string>
    <string name="book_reader_pay_prompt">当前章节为付费章节，点击购买继续阅读</string>
    <string name="book_reader_recharge_title">余额不足</string>
    <string name="book_reader_recharge_message">请充值后继续阅读</string>
    <string name="book_reader_recharge_negative_text">以后充值</string>
    <string name="book_reader_recharge_positive_text">前往充值</string>
    <string name="searsh_hint"><font size="14">请输入关键字</font></string>
    <string name="book_reader_auto_buy">自动购买</string>
    <string name="book_reader_auto_buy_prompt">开启自动购买后系统将自动扣费，避免弹框打扰</string>
    <string name="book_reader_hand_buy">每次提醒</string>
    <string name="book_reader_buy_text">购买(消耗%s花贝)</string>
    <string name="book_reader_buy_successful_text">购买成功</string>
    <string name="give_success_gold">领取成功</string>

    <string name="book_reader_prompt">温馨提示</string>
    <string name="book_reader_delete_book_prompt">您确定从书架上移除这本书?</string>
    <string name="book_reader_cancel_text">取消</string>
    <string name="book_reader_sure">确认</string>
    <string name="book_reader_setting_text">立即开启</string>
    <string name="book_reader_read_progress_text">阅读%d%%</string>
    <string name="book_reader_see_all_book_text">查看全部%d本书</string>
    <string name="book_reader_see_all_text">查看全部</string>

    <!-- xlistview -->
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新&#8230;</string>
    <string name="xlistview_header_last_time">最后更新：</string>


    <string name="listview_header_hint_normal">下拉可以刷新</string>
    <string name="listview_header_hint_release">松开立即刷新</string>
    <string name="nomore_loading">no more to be loaded</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">loading done</string>
    <string name="listview_header_last_time">last update：</string>

    <string name="book_reader_sure_to_login_out">您确定要退出吗?</string>

    <string name="book_reader_is_loading">登录中...</string>
    <string name="book_reader_login_text">未登录</string>
    <string name="book_reader_recharge_text">充值</string>
    <string name="book_reader_reload_text">重新登录</string>
    <string name="book_reader_recent_read_text">最近阅读</string>
    <string name="book_reader_no_recent_read_book">无最近阅读书籍</string>

    <string name="book_reader_prompt_text">提示</string>
    <string name="book_reader_sure_to_add_shelf">是否加入书架？</string>
    <!-- 分享-->
    <string name="weixin_share">微信</string>
    <string name="weixin_circle">朋友圈</string>
    <string name="weixin_shoucang">收藏</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="qq_qzone">QQ空间</string>
    <string name="not_install_wx_client">尚未安装微信客户端</string>
    <string name="not_install_qq_client">尚未安装QQ客户端</string>
    <string name="not_support_qq_client">需要最新版本的QQ客户端</string>
    <string name="edittext_type">0123456789qwertyuiopasdfghjklzxcvbnm</string>
    <string name="download_progress">正在下载中，请稍后\u2026(%1$s%%)</string>
    <!--评论hint-->
    <string name="default_hint">请输入回帖内容</string>
    <!--评论hint-->
    <string name="tuijian">重磅推荐</string>
    <string name="jingdian">经典完本</string>
    <string name="mianfei">免费新书</string>
    <string name="zuijin">最近更新</string>
    <string name="xiaomilogin">系统检测到您领取了1000花瓣的小米卡券，登陆后即时获取~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recharge_help">① 花贝为花溪小说网消费用虚拟币 \n\n②花瓣为花溪小说网赠送用户之体验币，仅限于阅读消费\n\n③当用作阅读时，1花瓣=1花贝\n\n④1元=100花贝</string>

    <string name="hebut_ptr_pull_down">下拉添加书架</string>
    <string name="hebut_ptr_pull_down2">下拉移除书架</string>

    <string name="hebut_ptr_release_to_refresh">松开添加书架</string>
    <string name="hebut_ptr_release_to_refresh2">松开移除书架</string>

    <string name="hebut_ptr_updating">添加中...</string>
    <string name="hebut_ptr_updating2">移除中...</string>

    <string name="hebut_ptr_update_complete">操作完成</string>
    <string name="hebut_ptr_update_complete2">操作完成</string>

    <string name="hebut_ptr_last_update">last update: </string>

    <string name="hebut_ptr_seconds_ago"> seconds ago</string>

    <string name="hebut_ptr_minutes_ago"> minutes ago</string>

    <string name="hebut_ptr_hours_ago"> hours ago</string>


    <string name="alipay_with">请先设置支付宝账号</string>
    <string name="alipay_with1">支付宝提现</string>
    <string name="wechat_with">请先设置微信账号</string>
    <string name="payment_date_hint">1、到账时间:正常情况下,三个工作日即可\n\n2、法定节假日略有延时,请耐心等待</string>
    <string name="task_hint">提现须知及疑问详见界面右上角"奖励规则"按钮</string>
    <string name="front_text">暂时没有徒弟可唤醒,</string>
    <string name="behind_text">立即收徒 ></string>
    <string name="behin2_text">立即提现 ></string>
    <string name="behin3_text">查看任务 ></string>
    <string name="front2_text">暂时还没有徒弟,</string>
    <string name="front3_text">暂时还没有收益,</string>
    <string name="front4_text">暂时还没有提现,</string>
    <string name="front5_text">暂时还没有奖励,</string>


    <!--新版精选书城-->
    <string name="monthly_hint_text">每月只需15元,包月作品任意读</string>
    <string name="man_text">男生</string>
    <string name="woman_text">女生</string>
    <!--书城男生描述-->
    <!--玄幻仙侠 热血神奇，总之救赎爽！( •́ .̫ •̀ )-->
    <!--都市传说 乡村啊都市啊幻想啊，嗯。乛◡乛-->
    <string name="zhong_man">这些书千万不能错过(ง ·̀_·́)ง </string>
    <string name="mian_man">趁着不要钱赶快阅读(￢､￢) </string>
    <string name="wan_man">都是完结的，一次看到饱！ (´·灬·‘) </string>
    <string name="xuanhuan_man">热血神奇，总之救赎爽！( •́ .̫ •̀ )</string>
    <string name="dushi_man">乡村啊都市啊幻想啊，嗯。乛◡乛</string>
    <string name="xihuan_man">系统娘掐指一算，你应该爱看｡￫‿￩｡</string>
    <string name="gengxin_man">作者大大更新了哦≖‿≖✧</string>
    <string name="xuanhuan">玄幻仙侠</string>
    <string name="dushi">都市传说</string>
    <!--书城女生描述-->
    <!--现言总裁 豪门恩怨成长励志神马的~ฅ’ω’ฅ-->
    <!--古言穿越 宫斗宅斗种田全玄幻都有哦ʕ·͡-·ʔ-->
    <string name="zhong_woman">这些书千万不能错过(ง ·̀_·́)ง </string>
    <string name="mian_woman">趁着不要钱赶快阅读(￢､￢) </string>
    <string name="wan_woman">都是完结的，一次看到饱！ (´·灬·‘) </string>
    <string name="zongcai_woman">豪门恩怨成长励志神马的~ฅ’ω’ฅ</string>
    <string name="chuanyue_woman">宫斗宅斗种田全玄幻都有哦ʕ·͡-·ʔ</string>
    <string name="xihuan_woman">系统娘掐指一算，你应该爱看｡￫‿￩｡</string>
    <string name="gengxin_woman">作者大大更新了哦≖‿≖✧</string>
    <string name="zongcai">现言总裁</string>
    <string name="chuanyue">古言穿越</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="other_like">看过本书的人也喜欢</string>
</resources>
